fix news layout on mobile

--- a/components/card/style/card.module.css
+++ b/components/card/style/card.module.css
@@ -1,8 +1,15 @@
 .root {
-    height: 320px;
-    width: 280px;
-    background: #dcdcdc;
-    padding: 4px;
-    margin: 15px;
-    border-radius: 3px;
+  height: 320px;
+  width: 280px;
+  background: #dcdcdc;
+  padding: 4px;
+  margin: 15px;
+  border-radius: 3px;
+}
+@media only screen and (max-width: 768px) {
+  .root {
+    width: 100%;
+    height: 90%;
+    margin: 10px 35px;
+  }
 }
