--- a/src/Container/News/style/news.module.css
+++ b/src/Container/News/style/news.module.css
@@ -1,43 +1,8 @@
 .news_sect {
-  margin-top: 5%;
-  padding: 0 75px;
+  margin-top: 2%;
+  padding: 0 180px;
 }
-/* banner section starts here */
-.banner {
-  height: 80%;
-  width: 94%;
-  margin: 3% 0%;
-  background: #dcdcdc;
-  padding: 4px;
-}
-.banner_content {
-  background: #fff;
-  display: flex;
-}
-.img {
-  height: 100%;
-  width: 70%;
-}
-.banner_details {
-  width: 30%;
-  background: #ffe000;
-  padding: 3% 20px;
-}
-.banner_sport {
-  margin-top: 8%;
-}
-.banner_details div {
-  margin-top: 20%;
-}
-.contestants {
-  padding-bottom: 8%;
-  width: 190px;
-  height: 88px;
-}
-.bookings {
-  margin-top: 5%;
-}
-/* bannecr section ends here */
+/* cards section starts here */
 .content_area {
   width: 100%;
   height: 100%;
@@ -76,6 +41,7 @@
 }
 .live h3 {
   font-weight: 300;
+  padding: 0px 12px;
 }
 #card {
   height: 260px;
@@ -115,3 +81,18 @@
   text-decoration: underline;
 }
 /* live sports section ends here */
+@media only screen and (max-width: 768px) {
+  .news_sect {
+    padding: 0;
+    margin: 0;
+  }
+  .txt{
+    font-size: 20px;
+  }
+  .details {
+    padding-top: 18px;
+  }
+  .live {
+    padding: 12px 18px;
+  }
+}
